--- a/settings.gradle
+++ b/settings.gradle
@@ -3,5 +3,5 @@ plugins {
     id 'org.gradle.toolchains.foojay-resolver-convention' version '0.4.0'
 }
 
-rootProject.name = 'capyfile.rmi.interfaces'
+rootProject.name = 'capyfile.rmi'
 include('lib')
