--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -19,6 +19,10 @@ dependencies {
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:31.1-jre'
+
+    // RMI remote stream
+    // https://mvnrepository.com/artifact/com.healthmarketscience.rmiio/rmiio
+    implementation 'com.healthmarketscience.rmiio:rmiio:2.1.2'
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
